--- a/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
+++ b/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
@@ -108,7 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)ZPGProject;$(SolutionDir)..\Lib\glew-2.1.0\include;$(SolutionDir)..\Lib\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)..\Lib\Assimp\include;$(SolutionDir)..\Lib\glm-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)ZPGProject;$(SolutionDir)..\Lib\glew-2.1.0\include;$(SolutionDir)..\Lib\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)..\Lib\Assimp\include;$(SolutionDir)..\Lib\glm-master;$(SolutionDir)..\Lib\imgui-1.89.9;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -138,10 +138,19 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="CallbackManager.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="imgui\backends\imgui_impl_glfw.cpp" />
+    <ClCompile Include="imgui\backends\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Light\LightManager.cpp" />
     <ClCompile Include="Light\Light.cpp" />
     <ClCompile Include="Model\GameObjectBuilder.h" />
-    <ClCompile Include="Model\ModelManager.cpp" />
+    <ClCompile Include="Model\Mesh.cpp" />
+    <ClCompile Include="Model\MeshManager.cpp" />
+    <ClCompile Include="Scene\AssimpLoaderScene\AssimpLoaderScene.cpp" />
     <ClCompile Include="Scene\DefaultScene\HouseObjectGroup.cpp" />
     <ClCompile Include="Model\GameObject.cpp" />
     <ClCompile Include="main.cpp" />
@@ -164,6 +173,15 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="CallbackManager.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="imgui\backends\imgui_impl_glfw.h" />
+    <ClInclude Include="imgui\backends\imgui_impl_opengl3.h" />
+    <ClInclude Include="imgui\backends\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Light\LightManager.h" />
     <ClInclude Include="Light\Light.h" />
     <ClInclude Include="Models\plain_indiced.h" />
@@ -171,7 +189,9 @@
     <ClInclude Include="Models\bushes.h" />
     <ClInclude Include="Models\gift.h" />
     <ClInclude Include="Models\tree.h" />
-    <ClInclude Include="Model\ModelManager.h" />
+    <ClInclude Include="Model\Mesh.h" />
+    <ClInclude Include="Model\MeshManager.h" />
+    <ClInclude Include="Scene\AssimpLoaderScene\AssimpLoaderScene.h" />
     <ClInclude Include="Scene\DefaultScene\HouseObjectGroup.h" />
     <ClInclude Include="Model\GameObject.h" />
     <ClInclude Include="GlobalInclude.h" />
@@ -199,6 +219,7 @@
     <ClInclude Include="Transforms\Transform.h" />
     <ClInclude Include="Transforms\TransformComp.h" />
     <ClInclude Include="Transforms\TranslationTransform.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\fragment_shader_color_positional.glsl" />
@@ -210,6 +231,9 @@
     <None Include="Shaders\lightShader\vertex.glsl" />
     <None Include="Shaders\vertex_shader_positional_color.glsl" />
     <None Include="Shaders\vertex_shader_transformative.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="imgui\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
