--- a/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
+++ b/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
@@ -147,15 +147,16 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Light\LightManager.cpp" />
     <ClCompile Include="Light\Light.cpp" />
-    <ClCompile Include="Model\GameObjectBuilder.h" />
-    <ClCompile Include="Model\Mesh.cpp" />
-    <ClCompile Include="Model\MeshManager.cpp" />
+    <ClCompile Include="Model\GameObject\GameObjectBuilder.h" />
+    <ClCompile Include="Model\Mesh\Mesh.cpp" />
+    <ClCompile Include="Model\Mesh\MeshManager.cpp" />
+    <ClCompile Include="Scene\Objects\Skybox.cpp" />
     <ClCompile Include="Scene\AssimpLoaderScene\AssimpLoaderScene.cpp" />
     <ClCompile Include="Scene\DefaultScene\HouseObjectGroup.cpp" />
-    <ClCompile Include="Model\GameObject.cpp" />
+    <ClCompile Include="Model\GameObject\GameObject.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Model\ModelLoader.cpp" />
-    <ClCompile Include="Model\Model.cpp" />
+    <ClCompile Include="Model\Model\ModelLoader.cpp" />
+    <ClCompile Include="Model\Model\Model.cpp" />
     <ClCompile Include="Observer.cpp" />
     <ClCompile Include="Scene\DefaultScene\DefaultScene.cpp" />
     <ClCompile Include="Scene\ForestScene\ForestScene.cpp" />
@@ -189,13 +190,14 @@
     <ClInclude Include="Models\bushes.h" />
     <ClInclude Include="Models\gift.h" />
     <ClInclude Include="Models\tree.h" />
-    <ClInclude Include="Model\Mesh.h" />
-    <ClInclude Include="Model\MeshManager.h" />
+    <ClInclude Include="Model\Mesh\Mesh.h" />
+    <ClInclude Include="Model\Mesh\MeshManager.h" />
+    <ClInclude Include="Scene\Objects\Skybox.h" />
     <ClInclude Include="Scene\AssimpLoaderScene\AssimpLoaderScene.h" />
     <ClInclude Include="Scene\DefaultScene\HouseObjectGroup.h" />
-    <ClInclude Include="Model\GameObject.h" />
+    <ClInclude Include="Model\GameObject\GameObject.h" />
     <ClInclude Include="GlobalInclude.h" />
-    <ClInclude Include="Model\ModelLoader.h" />
+    <ClInclude Include="Model\Model\ModelLoader.h" />
     <ClInclude Include="Models\plain.h" />
     <ClInclude Include="Models\sphere.h" />
     <ClInclude Include="Models\suzi_flat.h" />
@@ -213,7 +215,7 @@
     <ClInclude Include="ShaderProgram\ShaderBuilder.h" />
     <ClInclude Include="ShaderProgram\Shader.h" />
     <ClInclude Include="ShaderProgram\ShaderProgram.h" />
-    <ClInclude Include="Model\Model.h" />
+    <ClInclude Include="Model\Model\Model.h" />
     <ClInclude Include="Transforms\RotationTransform.h" />
     <ClInclude Include="Transforms\ScaleTransform.h" />
     <ClInclude Include="Transforms\Transform.h" />
@@ -229,6 +231,8 @@
     <None Include="Shaders\lightShader\lambert.glsl" />
     <None Include="Shaders\lightShader\phong.glsl" />
     <None Include="Shaders\lightShader\vertex.glsl" />
+    <None Include="Shaders\skybox\fragment.glsl" />
+    <None Include="Shaders\skybox\vertex.glsl" />
     <None Include="Shaders\vertex_shader_positional_color.glsl" />
     <None Include="Shaders\vertex_shader_transformative.glsl" />
   </ItemGroup>
