--- a/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj.filters
+++ b/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="Model\Material\Texture.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\Scene.cpp">
+      <Filter>Zdrojové soubory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
