Fix some issues with libraries for easier introduction

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ Thumbs.db
 .vs/
 Project/ZPGProject/ZPGProject/Debug
 Project/ZPGProject/Debug
-Project/ZPGProject/x64
+Project/ZPGProject/x64/Debug/ZPGProject.exe
+Project/ZPGProject/x64/Debug/ZPGProject.pdb
 Project/ZPGProject/ZPGProject/x64/Debug
 Project/ZPGProject/ZPGProject/MAK0065
